--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,9 @@ set(CMAKE_CXX_STANDARD 23)
 option (LOCAL_SDL "Use locally built SDL" OFF)
 option (LOCAL_SPDLOG "Use locally built SPDLOG" OFF)
 
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/debug)
+endif()
+
 add_subdirectory(thirdparty)
 add_subdirectory(src)
