--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(cppgame)
+project(cppgame VERSION 0.1.0)
 set(CMAKE_CXX_STANDARD 23)
 
 option (LOCAL_SDL "Use locally built SDL" OFF)
